[package]
edition = "2021"
name = "rs-copy-folder"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async", "tokio"] }
napi-derive = "2.12.2"
# futures = "0.3"
# num_cpus = "1.13"
tokio = { version = "1.41.0", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
